--- a/Airline-Data.ipynb
+++ b/Airline-Data.ipynb
@@ -59,7 +59,7 @@
                 "\n",
                 "Number of Object: 500\n",
                 "\n",
-                "Class Lable: "Satisfaction"\n",
+                "Class Lable: Satisfaction\n",
                 "\n",
                 "\n",
                 "1- ID: Unique identifier for the passenger \n",
